# klatch

./: .gitmodules  Klatch.html  README.md  cabal.config  do-join.sh  do-login.sh  envoy-local.json  klatch.cabal  klatch.css  klatch.js  send-command.sh  with-defaults.sh
Klatch/: Busser.hs  Embassy.hs  Envoy.hs  Main.hs  Params.hs  TODO.org  Util.hs
Klatch/Common/: AMQP.hs  Params.hs  Types.hs  Util.hs
Klatch/Embassy/: Embassy.hs  FileLog.hs  HTTP.hs
Klatch/Envoy/: AMQP.hs  Envoy.hs  JSON.hs  Queue.hs  Socket.hs  Types.hs
Klatch/Ponger/: Main.hs  Ponger.hs
doc/: TODO.org  events-example.txt  events.txt  irc-example.txt
dummies/: irc-server.sh
remote-control/: do-connect.sh
src-main/: Embassy.hs  Envoy.hs  Ponger.hs
web-client/: Klatch.Area.js  Klatch.Clever.js  Klatch.Main.js  Klatch.Message.js  Klatch.MessageView.js  Klatch.Replaying.js  Klatch.Viewer.js  Klatch.html  klatch.css  klatch.js  klatch.less
web-client/3rd/: react-with-addons.js
web-client/projections/: Klatch.Projections.AreaMinimization.js  Klatch.Projections.HideBoringStuff.js  Klatch.Projections.Inhabitation.js  Klatch.Projections.Messages.js  Klatch.Projections.Online.js  Klatch.Projections.ReplayStatus.js  Klatch.Projections.ScrollLock.js  Klatch.Projections.SetTheme.js  Klatch.Projections.Topics.js
