name: klatch
version: 0.1.0.0
synopsis: An IRC client relay
homepage: http://github.com/mbrock/klatch
license: GPL
author: Mikael Brockman
maintainer: mikael@goula.sh
build-type: Simple
cabal-version: >=1.8

executable embassy
  main-is: Klatch/Embassy/Embassy.hs
  ghc-options: -Wall
  build-depends: base,
                 transformers,
                 mtl,
                 text,
                 stm,
                 containers,
                 exceptions,
                 bytestring,
                 unix,
                 uuid,
                 time,
                 scotty,
                 aeson,
                 amqp,
                 pipes,
                 pipes-network,
                 pipes-concurrency,
                 pipes-bytestring,
                 pipes-parse,
                 network-simple,
                 ghc-prim,
                 async,
                 optparse-applicative,
                 hslogger,
                 old-locale,
                 hscolour,
                 directory,
                 irc-bytestring,
                 attoparsec,
                 warp,
                 wai,
                 wai-extra,
                 wai-eventsource,
                 http-types,
                 blaze-builder,
                 conduit,
                 wai-middleware-static,
                 QuickCheck,
                 unordered-containers

executable envoy
  main-is: Klatch/Envoy/Envoy.hs
  ghc-options: -Wall
  build-depends: base,
                 transformers,
                 mtl,
                 text,
                 stm,
                 containers,
                 exceptions,
                 bytestring,
                 unix,
                 uuid,
                 time,
                 scotty,
                 aeson,
                 amqp,
                 pipes,
                 pipes-network,
                 pipes-concurrency,
                 pipes-bytestring,
                 pipes-parse,
                 network-simple,
                 ghc-prim,
                 async,
                 optparse-applicative,
                 hslogger,
                 old-locale,
                 hscolour,
                 irc-bytestring,
                 attoparsec

executable ponger
  main-is: Klatch/Ponger/Main.hs
  ghc-options: -Wall
  build-depends: base,
                 transformers,
                 mtl,
                 text,
                 stm,
                 containers,
                 exceptions,
                 bytestring,
                 unix,
                 uuid,
                 time,
                 aeson,
                 amqp,
                 pipes,
                 pipes-concurrency,
                 pipes-bytestring,
                 pipes-parse,
                 pipes-network,
                 network-simple,
                 ghc-prim,
                 async,
                 optparse-applicative,
                 hslogger,
                 old-locale,
                 hscolour,
                 directory,
                 irc-bytestring,
                 attoparsec
